@@ -2855,6 +2855,11 @@
         shown.</td>
     </tr>
     <tr>
+      <td><pre>-autopause &lt;1|0&gt;</pre></td>
+      <td>Enable or disable automatic pause/continue of emulation, when
+        Stella loses/gains focus.</td>
+    </tr>
+    <tr>
       <td><pre>-pausedim &lt;1|0&gt;</pre></td>
       <td>Enable or disable emulation dimming in pause mode.</td>
     </tr>
@@ -3966,6 +3971,10 @@
           <tr><td>Multi-threading</td><td>Enable multi-threaded rendering</td><td>-threads</td></tr>
           <tr><td>Fast SuperCharger load</td><td>Skip progress loading bars for SuperCharger ROMs</td><td>-fastscbios</td></tr>
           <tr><td>Show UI messages</td><td>Overlay UI messages onscreen</td><td>-uimessages</td></tr>
+          <tr><td>
+            Automatic pause</td><td>Enable or disable automatic pause/continue of emulation,
+            when Stella loses/gains focus.</td><td>-autopause
+          </td></tr>
           <tr><td>Confirm exiting...</td><td>Display a popup when emulation is exited</td><td>-confirmexit</td></tr>
           <tr>
             <td>When entering/exiting emulation:</td>
